<resources>
    <string name="app_name">MamanStory</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="welcome_text">Hi! Welcome To Maman Story App</string>
    <string name="register_text">Belum Punya Akun? Yuk Daftar Dulu</string>
    <string name="name">Full Name</string>
    <string name="register_image">Register Image</string>
    <string name="btn_register">Register</string>
    <string name="title_welcome_page">Selamat Datang di Aplikasi Maman Story</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="message_welcome_page">Platform Social Media Pertama di Indonesia Dengan Berbagai Macam Fitur dan Yang Paling Penting Adalah Pertama Kalinya Nama Maman Digunakan Menjadi Sebuah Nama Aplikasi</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="btnAddSnapStory">Button Add Snap Story</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="image_description">Image Description</string>
    <string name="judul_text_story">Judul Text Story</string>
    <string name="detail_name_user">Detail Name User</string>
    <string name="description_text">Description Text</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_logout">Logout</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="connection_warning">Please check your internet connection</string>
    <string name="app_permission_warning">Please enable the app\'s location permission</string>
    <string name="setting">Setting</string>
    <string name="maps">Maps</string>
    <string name="choose_picture">pilih gambar</string>
    <string name="apa_yang_anda_pikirkan">Apa Yang Anda Pikirkan?</string>
    <string name="upload_warning">Pilih Gambar Terlebih Dahulu</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_out">Sign Out</string>
    <string name="image_preview">Image Preview</string>
    <string name="upload_story">Upload Story</string>
    <string name="gallery">Gallery</string>
</resources>